Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/SessionEntry__c.object-meta.xml
<CustomObject>
    <label>SessionEntry</label>
    <nameField>
        <displayFormat>SE-{000}</displayFormat>
        <label>SessionEntry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>