Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <label>Course Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>