Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Session Entry</relationshipLabel>
    <relationshipName>Sessions_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>