Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/New_Task__c.field-meta.xml
<CustomField>
    <fullName>New_Task__c</fullName>
    <label>New Task</label>
    <length>100</length>
    <type>Text</type>
</CustomField>