Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/No_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Hours__c</fullName>
    <label>No Of Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>