Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/selectsesion__c.field-meta.xml
<CustomField>
    <fullName>selectsesion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected Session</label>
    <type>Checkbox</type>
</CustomField>