Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Sessions Entry</relationshipLabel>
    <relationshipName>Sessions_Entry</relationshipName>
    <type>Lookup</type>
</CustomField>