Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Name__c</fullName>
    <label>Session Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>