Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>