Reetan.Nayak Dev 25/force-app/main/default/objects/SessionEntry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
                <color>#FF0000</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#419249</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not yet Started</fullName>
                <color>#6633FF</color>
                <label>Not yet Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>